<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tel_phone" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tel_number" />

        <EditText
            android:id="@+id/dial_times"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/call_interval" />

        <EditText
            android:id="@+id/call_interval"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/auto_receive" />

        <CheckBox
            android:id="@+id/check_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_btn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/auto_run" />

        <Button
            android:id="@+id/pause_btn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/auto_pause" />
    </LinearLayout>

</LinearLayout>